kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sre-microservices
  labels:
    app: sre-project
    student: daryn-kaber
