kubernetes/03-product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api
  namespace: sre-microservices
  labels:
    app: product-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-api
  template:
    metadata:
      labels:
        app: product-api
    spec:
      containers:
        - name: product-api
          image: sre-product-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5002
          livenessProbe:
            httpGet:
              path: /health
              port: 5002
            initialDelaySeconds: 40
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 5002
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: product-api
  namespace: sre-microservices
spec:
  selector:
    app: product-api
  ports:
    - port: 5002
      targetPort: 5002
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-db
  namespace: sre-microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-db
  template:
    metadata:
      labels:
        app: product-db
    spec:
      containers:
        - name: product-db
          image: postgres:15
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "cloudacademy"]
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - name: product-db-pvc
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: product-db-pvc
          persistentVolumeClaim:
            claimName: product-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: product-db
  namespace: sre-microservices
spec:
  selector:
    app: product-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
