kubernetes/04-order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-api
  namespace: sre-microservices
  labels:
    app: order-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-api
  template:
    metadata:
      labels:
        app: order-api
    spec:
      containers:
        - name: order-api
          image: sre-order-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5003
          livenessProbe:
            httpGet:
              path: /health
              port: 5003
            initialDelaySeconds: 40
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 5003
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              memory: "128Mi"
              cpu: "150m"
            limits:
              memory: "384Mi"
              cpu: "400m"
---
apiVersion: v1
kind: Service
metadata:
  name: order-api
  namespace: sre-microservices
spec:
  selector:
    app: order-api
  ports:
    - port: 5003
      targetPort: 5003
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-db
  namespace: sre-microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-db
  template:
    metadata:
      labels:
        app: order-db
    spec:
      containers:
        - name: order-db
          image: postgres:15
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "cloudacademy"]
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - name: order-db-pvc
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: order-db-pvc
          persistentVolumeClaim:
            claimName: order-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: order-db
  namespace: sre-microservices
spec:
  selector:
    app: order-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
